top nav on mobile - fixes

--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -233,7 +233,7 @@ body {
     padding: 0;
     margin: 0;
     font-size: 18px;
-    font-family: HelveticaNeue-Light, "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-family: 'Crossten-ExtraLight';
     font-weight: 400;
     background: #EEE;
     line-height: 1.4rem
@@ -245,7 +245,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: Gibson, HelveticaNeue-Light, "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-family: 'Crossten-ExtraBold';
     color: #001A33
 }
 
