--- a/src/components/shared/Footer/footer-style.scss
+++ b/src/components/shared/Footer/footer-style.scss
@@ -2,7 +2,7 @@
 .nav-footer{
   background: #ACACAC;
   width: 100%;
-  height: 90px;
+  height: auto;
   color: #FFF;
     }
     div,
